# linux-fg

./: .gitignore.sh  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  lossless-scaling  readme.md
shaders/: interpolate.comp  interpolate.comp.spv  motion.comp  motion.comp.spv  scale.comp  scale.comp.spv
src/: frame_manager.cpp  frame_manager.hpp  logger.hpp  main.cpp  scaler.cpp  scaler.hpp  vulkan_context.cpp  vulkan_context.hpp  window_capture.cpp  window_capture.hpp
